# wombattraining

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  wombat_points
conf/: Makefile  Makefile.am  Makefile.in  bonus1figures  bonus2schemas  config
pixmaps/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  bonus.c  bonus.h  bonus1fig.c  bonus1fig.h  configfile.c  configfile.c~  configfile.h  display.c  display.h  draw.c  draw.h  events.c  events.h  font.c  font.c~  font.h  joystick.c  joystick.h  logging.c  logging.h  main.c  main.c~  menu.c  menu.h  points.c  points.h  scenario.c  scenario.h  timer.c  timer.h  vars.c  vars.c~  vars.h  wombat.c  wombat.h
src/.deps/: bonus.Po  bonus1fig.Po  configfile.Po  display.Po  draw.Po  events.Po  font.Po  joystick.Po  logging.Po  main.Po  menu.Po  points.Po  scenario.Po  timer.Po  vars.Po  wombat.Po
