AM_CFLAGS = -DDATADIR=\"$(datadir)\"

bin_PROGRAMS = wombattraining
wombattraining_SOURCES = bonus.h bonus.c bonus1fig.h bonus1fig.c \
	configfile.h configfile.c display.h display.c draw.h draw.c \
	events.h events.c font.h font.c joystick.h joystick.c logging.h logging.c \
	main.c menu.h menu.c timer.h timer.c vars.h vars.c wombat.h wombat.c \
	points.c  points.h scenario.c scenario.h
